Initial Gating Commit

--- a/playbooks/os-designate-install.yml
+++ b/playbooks/os-designate-install.yml
@@ -22,7 +22,7 @@
   tasks:
     - name: Install git
       apt: 
-        name: git
+        name: "{{ item }}"
         state: installed
 
 - name: Install Designate Server
