--- a/playbooks/setup-bind-apt.yml
+++ b/playbooks/setup-bind-apt.yml
@@ -1,4 +1,4 @@
-# Copyright 2014-2017, Rackspace US, Inc.
+# Copyright 2014-2018, Rackspace US, Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -28,11 +28,12 @@
   
 - name: Install named configuration file
   template: 
-    src: ../files/aio/named.conf.j2
+    src: ../files/named.conf.j2
     dest: /etc/bind/named.conf.options
     owner: root
     group: root
-
+  notify: Restart BIND
+    
 - name: Create needed directories
   file: 
     name: "{{ item }}"
@@ -42,7 +43,8 @@
   with_items:
     - "/var/cache/bind/data"
     - "/var/cache/bind/dynamic"
-
+  notify: Restart BIND
+  
 - name: Start bind 
   service: 
     name: bind9
