RI-136: Update for pike

--- a/playbooks/setup-bind-apt.yml
+++ b/playbooks/setup-bind-apt.yml
@@ -19,7 +19,13 @@
   apt:
     name: bind9
     state: present
+  register: bind_installed
+  ignore_errors: yes
 
+- name: Install BIND fallback method
+  command: sudo apt-get install -y bind9
+  when: bind_installed | failed
+  
 - name: Install named configuration file
   template: 
     src: ../files/aio/named.conf.j2
