--- a/playbooks/setup-infra-firewall-mdns.yml
+++ b/playbooks/setup-infra-firewall-mdns.yml
@@ -16,6 +16,13 @@
 - name: Setup iptables rules for designate-mdns
   hosts: designate_all
   tasks:
+  - name: Install needed packages for firewall
+    apt:
+      name: netfilter-persistent
+      state: present
+    delegate_to: "{{ physical_host }}"  
+    when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '16.04'
+
   - name: Enable forwarding for port mdns server
     iptables:
       chain: FORWARD
@@ -30,7 +37,7 @@
     iptables:
       table: nat
       chain: PREROUTING
-      in_interface: "{{ management_bridge }}"
+      in_interface: "{{ ansible_default_ipv4['interface'] }}"
       protocol: "{{ item }}"
       destination_port: 5354
       jump: DNAT
