--- a/playbooks/setup-bind.yml
+++ b/playbooks/setup-bind.yml
@@ -39,7 +39,7 @@
       service:
         name: bind9
         state: restarted
-        
+
 
 - name: Install rndc.key
   hosts: designate_all
@@ -59,9 +59,30 @@
     # The designate container will be missing the rndc executable
     # this needs to be installed so we can communicate with bind
     # nameservers
-    - name: Install packages
-      apt:
-        name: "{{ item }}"
-        state: installed
-      with_items:
-        - "bind9utils"
+    - block:
+        - name: Update the apt cache
+          apt:
+            update_cache: yes
+            cache_valid_time: "{{ (cache_timeout is defined) | ternary(cache_timeout, omit) }}"
+          register: update_apt_cache
+          until: update_apt_cache | success
+          retries: 5
+          delay: 2
+
+        - name: Install BIND Utils (primary method)
+          apt:
+            name: bind9utils
+            state: present
+          register: install_packages
+          until: install_packages | success
+          retries: 5
+          delay: 2
+      rescue:
+        - name: Install BIND Utils (fallback method)
+          command: |
+            apt-get update
+            apt-get install -y bind9utils
+          register: install_packages
+          until: install_packages | success
+          retries: 5
+          delay: 2
