--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,39 +1,42 @@
-alabaster==0.7.10
-babel==2.5.3
-certifi==2018.1.18
+-i https://pypi.python.org/simple
+alabaster==0.7.12
+babel==2.6.0
+certifi==2018.10.15
 chardet==3.0.4
 chios==0.1.4
-click==6.7
+click==7.0
 colorclass==2.2.0
 commonmark==0.5.4
 doc8==0.8.0
 docutils==0.14
-idna==2.6
-imagesize==1.0.0
+filelock==3.0.9
+idna==2.7
+imagesize==1.1.0
 jinja2==2.10
-markdown==2.6.11
+markdown==3.0.1
 markupsafe==1.0
-packaging==17.1
+packaging==18.0
 pandoc==1.0.2
-pbr==4.0.2
-pluggy==0.6.0
+pbr==5.1.0
+pluggy==0.8.0
 ply==3.11
-py==1.5.3
+py==1.7.0
 pyenchant==2.0.0
 pygments==2.2.0
-pyparsing==2.2.0
-pytz==2018.4
+pyparsing==2.2.2
+pytz==2018.7
 recommonmark==0.4.0
-requests==2.18.4
+requests==2.20.0
 restructuredtext-lint==1.1.3
 six==1.11.0
 snowballstemmer==1.2.1
-sphinx-rtd-theme==0.3.0
-sphinx==1.7.2
-sphinxcontrib-spelling==4.1.0
+sphinx-rtd-theme==0.4.2
+sphinx==1.8.1
+sphinxcontrib-spelling==4.2.0
 sphinxcontrib-versioning==2.2.1
-sphinxcontrib-websupport==1.0.1
-stevedore==1.28.0
-tox==3.0.0
-urllib3==1.22
-virtualenv==15.2.0
+sphinxcontrib-websupport==1.1.0
+stevedore==1.30.0
+toml==0.10.0
+tox==3.5.3
+urllib3==1.24
+virtualenv==16.0.0
