--- a/doc/tox.ini
+++ b/doc/tox.ini
@@ -51,7 +51,7 @@ commands =
   make clean -C {toxinidir}
   make singlehtml -C {toxinidir}
 
-[docs8]
+[doc8]
 # Ignore target directories
 ignore-path = _build*,.tox*
 # File extensions to use
